--- a/src/FiakAdamTDK1.tex
+++ b/src/FiakAdamTDK1.tex
@@ -73,6 +73,13 @@
 \pagenumbering{arabic}
 
 %TODO import your own content
+\include{include/ownContent/bevezetes}
+\include{include/ownContent/hatter}
+\include{include/ownContent/sajat}
+\include{include/ownContent/ertekeles}
+\include{include/ownContent/konkluzio}
+
+%%TMP
 \include{content/introduction}
 \include{content/latex-tools}
 \include{content/thesis-format}
