--- a/src/include/ownContent/hatter.tex
+++ b/src/include/ownContent/hatter.tex
@@ -1,45 +1,221 @@
 \chapter{Háttérismeretek}
+Ebben a fejezetben találhatóak azok az információk, amelyek a dolgozatban leírt eredmények megértéséhez feltétlenül szükségesek.
+
+Először bemutatásra kerülnek modell alapú rendszertervezés, valamint a szimulációs technológiák előnyei és a motiváció ezeknek az eszközöknek az egyesítésére.
+Ezután a területek aktuális problémáinak részletes bemutatása következik, mivel a dolgozat célja megoldásokat ajánlani ezeknek a problémáknak a megoldására.
 
 \section{Motiváció}
-
+    A szimulációs technológiák már hosszú ideje fontos szerepet játszanak a fejlesztési és tervezési folyamatokban, míg a modell alapú rendszertervezés az utóbbi folyamatosan terjed az iparban, fokozatosan felváltja a klasszikus, dokumentum alapú módszereket.
+    A továbbiakban összegyűjtésre kerültek a technológiák külön-külön nyújtott előnyei, valamint a kombinálásukkal elérhető további előnyök, amelyek a dolgozat motivációját adják.
+    
     \subsection{Modell alapú rendszertervezés előnyei}
+        A rendszertervezés elsődleges célja, hogy a egy adott műszaki fejlesztés végén az elkészült rendszer működőképes legyen és képes legyen betölteni a rendeltetési célját.
+        Ide tartozik a követelmények összegyűjtése és kezelése, a probléma dekomponálása kisebb egységekre, amelyek egy-egy komponensként megvalósíthatóak konkrét fejlesztőcsapatok által, valamint a különböző szakterületek igényeinek és munkájának az összehangolása.
+        Ezt a feladatot hagyományosan a fejlesztés részletes, írásos dokumentációjával oldották meg, ahol a fejlesztőcsapatok a rendszerszervezők és egymás dokumentumaiból tájékozódtak, és a döntéseiket az aktuális verziókra való hivatkozva indokolták.
 
+        Más műszaki területekhez hasonlóan, a rendszerek komplexitásának növekedésével a rendszertervezésben is nehézkessé vált a klasszikus módszerekkel történő munka, mivel a rengeteg, gyorsan változó dokumentum mellett nehézzé vált a követelmények teljesítésének nyomon-követhetősége, valamint az egymással kapcsolatban álló komponensek kompatibilitásának garantálása.
+        Egy nagy komplexitású rendszernél, mint például egy hordozórakéta látható, hogy milyen sok fejlesztőcsapat dolgozik párhuzamosan különböző komponenseken. A dokumentum alapú megközelítésnél minden változást után frissíteni kellett a saját dokumentációt és eljuttatni azt minden más csoportnak, akinek ez befolyásolta a munkáját, hogy ők is módosíthassanak a komponensükön, az új információk alapján.
+        Egy repülőgép esetében, ahol ilyen rengeteg csapat dolgozik együtt, belátható, hogy a rengeteg beérkező dokumentum mellett, milyen nehéz is lehet egy egy csoportnak, hogy a terveit naprakészen tartsa, mivel elég egyetlen dokumentumot elkeverni, és az esetleges inkonzisztencia katasztrofális következményekhez vezethet.
+        A //TODO: PÉLDA KIKERESÉSE hordozórakéta fejlesztése során például a vezérlőszoftver fejlesztőinek figyelmét elkerülte az a részlet, hogy a rakéta megnövekedett tömege miatt új hajtóműveket terveztek, amelyeknek a megnövekedett tolóereje már nem volt ábrázolható a nyolc bites változókban, amelyek tökéletesen megfeleltek minden hajtőműhöz, amellyel a meglévő vezérlőrendszert korábban használták.
+        Az eredmény az volt, hogy a szoftver csak a mért adatok egyik felét használta fel, így a helyes mérési adatokat hibásan vette át -Az egyébként jól működő vezérlőrendszer- és a rakéta a kilövés után lezuhant.
+        A baleset megelőzhető lett volna, ha a vezérlőrendszerben tizenhat bites változókra váltanak, amikor a hajtóművek vezérlésében is megtették ugyan ezt, de sajnos ez az apró részlet elveszett a számtalan dokumentum között.
+        Szintén szemléletes példa amikor a //TODO: PÉLDA KIKERESÉSE mars-szonda tért le a tervezett pályájáról, mivel két fejlesztőcsapat nem ugyan abban a mértékegységben tárolta ugyan azt az adatot, így amikor az átadásra került a szoftverkomponensek között, félreértelmezésre kerültek. Ez az incidens is elkerülhető lett volna, ha bárki észreveszi a mértékegységek eltérését, de sajnos mindkét félnek természetes volt a saját választása és elsiklottan az eltérés felett.
+
+        A probléma megoldására fejlesztették ki a modell alapú rendszertervezést, ahol a dokumentumok helyett egy matematikai alapokon nyugvó modellezési nyelvben írják le a rendszereket. A módszer előnye, hogy mivel a modell alapja egy matematikai formalizmus, így magán a rendszerterven is végezhetőek különböző műveletek, automatikusan ellenőrizhetőek bizonyos feltételek, valamint használhatóak a más területen már bevett verziókezelő-rendszerek a konzisztens állapotok fenntartására.
+        A továbbiakban az új lehetőségek legfontosabb előnyi kerülnek részletesebben bemutatásra.
+        
         \subsubsection{Nyomon-követhetőség}
+        Mivel az új megközelítésben az egyes modellelemek közt nem csak egy irodalomjegyzékben történő hivatkozás, hanem tényleges, logikai kapcsolat áll fent a modellben, így lehetőség van az egyes követelményeket összekötni azokkal a komponensekkel, amelyek ténylegesen megvalósítja azt, majd ezeken a kapcsolatokon keresztül keresni, navigálni a modellen belül. Vegyük például a következő követelményt: "A repülőgép több különböző forrásból gyűjt magasságadatokat, a megbízható navigáció érdekében."
+        Könnyen belátható, hogy ez egy kiemelten fontos követelmény a rendszerünk biztonsága érdekében. Ezt a magas szintű követelményt tovább finomítva kapjuk a következőt, amely már inkább a navigációs rendszert fejlesztő szakemberektől érkező részkövetelménye az előzőnek. "A repülőgép legalább két, különböző elven működő szenzorral gyűjt magasságadatokat a megbízható működés érdekében." Ez az új részlet azért fontos, mert az eredeti esetben használhattak volna két külön GPS vevő egységet, amely védelmet nyújtott volna az egyik meghibásodása esetén, azonban a GPS rendszer leállása továbbra is teljesen működésképtelenné tette volna a rendszert. Ellenben a pontosabb követelmények mellett, betervezésre kerülhet például egy barométer amivel teljesen más elven határozható meg a magasság, így védve mérés módjából fakadó meghibásodásoktól.
+        Ebben a példában, az eredeti magas szintű követelményt összeköthetjük a pontosított követelményekkel, amelyek már egy-egy konkrét, könnyen ellenőrizhető állításból állnak, így, ha valaki azt szeretné ellenőrizni, teljesül-e az eredeti cél, pontos képet kap az ellenőrizendő pontokról. Ha a részletes követelményeket összekötjük a komponensekkel, amelyek az adott részfeladatot megvalósítják, akkor az ellenőrzés is megkönnyíthető.
+        Ez a nyomon követhetőség lehetővé teszi lekérdezések készítését, így például automatikusan ellenőrizhető, hogy minden követelményt megvalósítottunk-e valamilyen komponenssel.
 
         \subsubsection{Modellek konzisztenciája}
+        Mint az már korábban is szerepelt, ezeket a modelleket a többi forrásállományhoz hasonlóan lehet verziókezelni a bevett eszközökkel, például Gittel.
+        Ezen túl lehetséges garanciákat és feltételezéseket felvenni az adott komponensekhez. Például a korábbi példában, ahol a változók mérete eltért a két komponensben, megtehető lett volna az adatformátumhoz felvenni a nyolc bites formátumot garanciaként, és ennek a teljesülését feltételezésként a másik komponensben.
+        Így amikor az új hajtómű implementációjában tizenhat bitesre változtatták a formátumot, akkor a garancia megszűnt volna, ami automatikusan hibát jelzett volna a másik komponens modelljében, mivel ott feltételezve volt a korábbi formátum.
 
         \subsubsection{Validáció és Verifikáció (V\&V) minden fejlesztési fázisban}
-
+        Az úgynevezett kritikus rendszereknél, ahol fontos, hogy az elkészült rendszer bizonyíthatóan mentes legyen az implementációs hibáktól, elengedhetetlen a validációs és verifikációs lépések végzése. A validáció azt mutatja meg, hogy a rendszer teljesít valamilyen követelményt, tehát képes-e betölteni a feladatát, míg a verifikáció feladata bizonyítani, hogy ezt úgy teszi, hogy bizonyos feltételeket minden esetben teljesít. Például, a validáció feladata, hogy egy repülőgép robotpilótája valóban képes elvezetni a gépez a megadott útvonalon, míg a verifikáció feladata bizonyítani, hogy a feladatot végző program minden -valóban megadható- útvonalon megfelelően működik, például nem okoz meghibásodást ha átrepül az egyenlítő felett, ahol váltania kell északi és déli szélességi körök között; nem kerül végtelen ciklusba; nem szivárogtatja a memóriát; nincs olyan állapot amibe beragadhat, például a pilóta bármikor vissza tudja venni az irányítást a robotpilótától, ha szükségesnek ítéli.
+        A klasszikus rendszertervezésben ezek a lépések csak a fejlesztés későbbi szakaszaiban kezdődhetnek meg, amikor már elkészültek prototípusok az egyes komponensekből.
+        Ezzel szemben, mivel a modell alapú megközelítésnél már a komponensek megvalósítása előtt rendelkezésre állnak különböző részletességű modellek ezekről, amelyeken végezhetőek műveletek, hiába nem fejeződött be -vagy egyáltalán kezdődött el- az implementációjuk.
+        Így például a fenti robotpilótás példában, ha egy állapotgépes megközelítést választunk, akkor magán az állapotgépen már akkor is lehetséges megvizsgálni, hogy előállhatnak e különböző veszélyes szituációk, amikor a szoftver és az azt futtató speciális számítógép megvalósítása még meg sem kezdődött.
+        Ezzel a módszerrel megelőzhető, hogy csak a hosszú fejlesztési folyamat végén derüljön fény koncepcionális hibákra, amelyek az egész rendszer újratervezését és az elkészült prototípus használhatatlanságát vonják magukkal.
+        Ez meggyorsíthatja a fejlesztési folyamatot és védelmet jelenthet a költséges zsákutcák túl későn való felfedezése ellen.
+        
         \subsubsection{Modellek újrahasználhatósága}
+        A többi műszaki területhez hasonlóan a rendszertervezésben is felmerült az igény a szakemberek részéről, hogy az egyszer elkészített komponenseket minél többször újra lehessen használni más projektek során, ezzel csökkentve a fejlesztési időt és költségeket.
+        A modellek újrahasználásának másik módja, ha általános komponenseket fejlesztünk. Például precíziós szervomotorokat akarunk gyártani, amelyekbe integrálva van a szabályozásuk is. Ahelyett, hogy minden megrendelő elkészítené a saját -esetleg hibás, vagy pontatlan- modelljét, elkészíthetjük a sajátunkat, amit a megrendelők rendelkezésére bocsátunk, így mindenki felhasználhatja azt, amikor a termékünket használja egy másik rendszer fejlesztésénél.
+        Természetesen ez az elv ugyanúgy használható például egy belső használatra szánt, általános adatgyűjtő modul esetében is, amit más fejlesztéseknél is újra tervezünk használni.
+        Alapvetően kétféle képpen lehetséges újrahasználni a modelleket. Ha egy korábbihoz hasonló rendszert tervezünk, akkor az egész rendszer modelljét szeretnénk felhasználni, más paraméterekkel. Például lehet hogy egy új autó tervezésekor az nagyobb és gyorsabb lesz, vagy kiegészül plusz biztonsági funkciókkal, de attól még a felépítése, az alapvető funkciói azonosak lesznek egy már elkészült autóéval így sok elemet fel lehet használni egy már kész modellből.
+        Ezeknek a gondolatoknak a továbbfejlesztése az úgynevezett platform alapú rendszertervezés, ahol először egy általános platformot fejlesztenek egy feladatkör ellátására, majd erre építenek rá konkrét rendszereket. Ilyen megközelítést használ például több autógyártó is. Van egy alapjuk ami az alvázból, felfüggesztésből és a vezérlőelektronikából áll, és erre építenek autókat más-más motorral, kasznival és különböző a fedélzeti számítógépen szoftveresen megvalósított funkcióval.
+        Ezzel a módszerrel, csak az új alkatrészeknek kell elkészíteni a modelljét, a régit csak elég ezeknek a függvényében újrakonfigurálni, így csökkentve a fejlesztési költségeket. Továbbá mivel számos különböző alváz és elektronika helyett egyetlen általános platformot kell nagy mennyiségben gyártani számos kisebb sorozat helyett, a hasonló termékek sorozatgyártása is jóval gazdaságosabbá válik.
+        
+        \subsubsection{Automatikusan származtatott nézetek, dokumentumok}
+        Már a dokumentum alapú időkben is megjelentek az egy egy specifikus terület képviselőinek összegyűjtött összefoglalók és a rendszer egy-egy specifikus tulajdonságát vizsgáló leírások.
+        Ezek eredetileg különálló dokumentumként léteztek, amit ugyan úgy frissíteni kellett a változások szerint, viszont mivel ezek nem feltétlenül egy komponensre, hanem egy nagyobb tervezési szempontra koncentrálnak, így minden érintett alkatrész módosulása új verziót igényelt.
+        A modell alapú rendszertervezésben a rendszer-modell tartalmaz minden információt egy helyen, ami a fejlesztés szempontjából lényeges.
+        Természetesen a specifikus nézetek továbbra is szükségesek, de lehetőséget kapunk egy jóval egyszerűbb alternatívára, a külön dokumentumok karbantartása helyett.
+        Ez pedig az, hogy a modellből generáljuk ezeket az összefoglalókat, ha szükség van rájuk. Ennek előnye, hogy nem igényel többletmunkát a mérnökök részéről, és bármely pillanatban azonnal rendelkezésre áll a naprakész verzió, nem kell várni, utánakeresni és mindig a tényleges állapotról adnak képet, nem pedig a készítés előtt kiválasztott esetleg inkonzisztens verziók összegzése.//TODO:Lábjegyzet a verziókezelés által garantált konzisztenciáról.
 
     \subsection{Szimulációs technológiák előnyei}
+    A szimulációs technológiák már évtizedek óta megjelentek a műszaki tudományok terén, szinte a fejlesztési folyamatok bármely pontjára találhatóak példák az alkalmazásukra.
+    Ennek oka, hogy számos előnnyel rendelkeznek, melyek közül a fontosabbak a továbbiakban olvashatóak.
 
         \subsubsection{Megismételhetőség és összehasonlíthatóság}
+        Egy rendszer tervezése és fejlesztése során, rendszerint szükség van a kidolgozott megoldás teljesítőképességének mérésére, vagy az alternatívák összehasonlítására.
+        Ezeknek a vizsgálatoknak az elvégzése, dokumentálása és kiértékelése során két kiemelten fontos szempontot kell szem előtt tartani.
+        A méréseknek muszáj megismételhetőnek lenniük. A műszaki világban mindennek oka van, és fontos, hogy ez az ok pontosan dokumentálva legyen, arra az esetre, ha később módosításokat hajtanak véget rajta, vagy kivizsgálják valamilyen probléma okát.
+        Ebből következik, hogy nem hivatkozhatunk megismételhetetlen mérési eredményekre, hiszen azok háttere nem vizsgálható meg a későbbiekben.
+        A megismételhetőség mellett fontos -főleg az alternatívák mérlegelésénél-, hogy két mérés eredményeit ténylegesen össze lehessen hasonlítani. Tegyük fel, hogy egy repülőgépet tervezünk és két hajtómű közül választhatunk. Ha a feladatra mindkettő alkalmas akkor -műszaki szempontból- valószínűleg a fogyasztásuk lesz a döntő tényező, így dönthetünk úgy, hogy méréseket végzünk ez alapján.
+        Ekkor azonban adódik egy probléma az összehasonlíthatóság kapcsán. Ahhoz, hogy érvényes legyen a mérések eredménye, pontosan ugyan azt az utat kellene megtenniük a gépeknek. Ha a tesztpilóta kicsit más útvonalat repül végig, például kicsivel meredekebben emelkedik felszállásnál, más íven kanyarodik, az mind változtatja a a végeredményt.
+        Ha ezt meg is oldjuk például egy robotpilótával, akkor is problémát jelentenek a környezeti tényezők. A levegő kőmérséklete, nyomása, páratartalma, a szélsebesség és az esetleges széllökések mind befolyásolják az eredményeket.
+        Ha ezeket mind figyelembe akarjuk venni, akkor belátható, hogy tényleges repülésből nem lesznek pontosan egyező körülményeink.
+        A másik lehetőség egy mesterséges tesztkörnyezet, mint egy szélcsatorna, de ott is felmerül a kérdés, hogy tudjuk-e pontosan replikálni az összes tényezőt, illetve, hogy azok minden valós körülménynek megfelelnek-e. Például lehet-e a repüléshez hasonlóan változtatni a légnyomást, hőmérsékletet és páratartalmat, vagy tényleg csak a szél paraméterei lesznek összehasonlíthatóak a mérésekben.
+        A probléma megoldása lehet, ha szimulációval egy virtuális környezetet és hajtóművet használunk. Mivel ennek a környezetnek minden paraméterét meghatározhatjuk, így garantálható, hogy pontosan olyan hatások érik a két rendszert a tesztek során, valamint az is, hogy a mérések később megismételhetőek lesznek.
 
         \subsubsection{Gazdaságos tesztelés}
+        A fejlesztési folyamatoknak szerves részét képzi a kidolgozott megoldások tesztelése, annak megállapítására, hogy azok valóban megfelelően működnek.
+        Azonban a hagyományos tesztek csak a prototípus elkészülése után kezdhetőek meg, ami költséges és időigényes folyamat. Ennek az elősegítésére hozták létre a Rapid Control Prototyping azaz a gyors prototípus készítés módszerét a szabályozástechnika területén.
+        A módszer lényege, hogy a tényleges vezérlő legyártása nélkül, szimulált környezetben figyelik az algoritmus működését, így egy megközelítés kipróbálásához, nem szükséges fizikai alkatrészeket legyártani, továbbá nagyobb biztonsággal lehet kísérletezni, mert egy hibás megoldás nem okoz valódi kárt.
+        Szimulációkkal azonban nem csak gyorsíthatóak a fejlesztési és tesztelési folyamatok. A hagyományos tesztek gyakran igen költségesek lehetnek, a szükséges hardverelemek miatt, főleg ha egy teszt megismétléséhez mindig új alkatrészekre van szükség.
+        Gondoljunk csak egy autótípus engedélyezési folyamata során végrehajtott töréstesztekre.
+        A szimuláció nem spórolhatja meg ezeknek az elvégzését, de van egy előnye az alkalmazásának.
+        A töréstesztet ugyanis addig végzik, amíg a végleges verzió meg nem felel rajtuk. Éppen azért van így, mert máshogy nem garantálható, hogy tényleg megfelelnek a fizikai teszten, minthogy elvégzik azt, az előírások szerint.
+        Ez azt jelenti, hogy -valószínűleg- vannak sikertelen tesztek. Ha ezeknek a verzióknak csak egy részét kiszűrik azzal, hogy egy szimulációban kipróbálják előre, akkor megspórolható az -akkor még egyedi és nem tömeggyártásban lévő- tesztautó legyártásának költsége.
+        Tehát csak akkor kezdenek el tesztpéldányokat készíteni és töréstesztre küldeni, amikor a koncepciós hibákat már kiszűrték, a költséges eljárás nélkül.
+        Ezen a ponton fontos megjegyezni azonban, hogy a szimulációk soha nem válthatják ki teljesen a fizikai teszteket.
+        Muszáj méréseket végezni a hagyományos eljárásokkal is, hogy meggyőződjünk a virtuális világnak a valósnak megfelelő működésérő. Természetesen az előbbi részben olvasottak alapján soha nem kaphatunk tökéletes egyezést a felsorolt zavaró tényezők miatt.
+        Azt azonban meg lehet állapítani, hogy a modellek kellő pontossággal írják-e le a valós viselkedést és minden fontos tényezőt figyelembe vettünk a szimulációk során.
+        Ez az összehasonlítási folyamat tekinthető a szimulációs tesztek tesztelésének, ami a többi teszthez hasonlóan nem elhagyható része a fejlesztésnek.
 
         \subsubsection{Szélsőséges esetek tesztelhetősége}
+        Az eddigiekben láttuk, hogy a szimulációkkal hatékonyabban vagy gazdaságosabban végezhetőek el bizonyos feladatok, azonban ez a technológia olyan lehetőségeket is biztosít, ami nem oldható meg más módszerekkel.
+        Ez ilyen lehetőség az olyan szituációk ellenőrzése, amelyek másképpen nem tesztelhetőek. A tesztelés célja, hogy a rendszer minden részének a megfelelő működéséről meggyőződjünk.
+        Vannak azonban olyan esetek amelyeket a hagyományos módszerrel, kész rendszeren nem tesztelhetünk.
+        Vegyünk például egy atomerőművet. A biztonságos működés érdekében elengedhetetlenek olyan biztonsági mechanizmusok, amelyek megakadályozzák a reaktor leolvadását.
+        Ezeken a rendszereken végezhetünk bizonyos ellenőrzéseket, azonban teljes működés teszteléséhez az kellene, hogy egy reaktort kritikus állapotba kellene hozni, és megfigyelni, hogy tényleg megfelelően működik-e a rendszer.
+        Ez a módszer nyilvánvalóan nem alkalmazkodó a gyakorlatban. A tesztek célja az esetleges hibák kiszűrése, hogy elkerüljük a katasztrofális kimeneteleket. Nem engedhető meg, hogy az ellenőrzés éppen azt a katasztrófát eredményezze, amelynek a kialakulását hivatott megakadályozni.
+        Azonban egy virtuális világban, következmények nélkül vizsgálhatjuk ezeknek a mechanizmusoknak a működését is. Természetesen ezek az eredmények nem teljesen egyenértékűek a valós tesztekkel, de sokkal többet jelentenek annál, mintha semmilyen ellenőrzést nem végeznénk, mivel a tervek működését -igazoltan pontos modelleket feltételezve- képesek demonstrálni.
 
         \subsubsection{Hardware és Software in the Loop tesztek (HiL/SiL)}
+        Az előző két részben tárgyalt előnyökhöz kapcsolódnak a HiL és SiL tesztelési technikák.
+        A SiL lényege hogy egy részben összeállított rendszer tesztelni kívánt komponensét egy speciális számítógépen futó szoftveres verzióval imitáljuk a rendszer többi része felé.
+        Ennek előnye, hogy a vezérlések logikája a valós rendszerben tesztelhető, anélkül, hogy le kellene gyártani a tesztelendő komponenshez tartozó hardveres elemeket.
+        Ez a technika elsősorban a gazdaságossági szempontból fontos.
+        Ezzel szemben a HiL teszteknél egy kész komponens köré helyezünk egy virtuális környezetet.
+        Ennek előnye, hogy a tényleges, kész komponens tesztelhető anélkül, hogy a teljes rendszert felépítenénk ehhez, illetve, hogy a virtuális rendszerrel olyan dolgokat is tehetünk, amelyet egy teljes rendszer esetén nem tehetnénk meg.
+        A korábbi reaktoros példa esetében például, ha szimulálunk egy ilyen reaktort a szenzorokkal és a beavatkozó szervekkel együtt, akkor azt megvizsgálhatjuk, hogy a beavatkozószervek vezérlése megfelelően működik, anélkül, hogy a fent tárgyalt veszélyeket vállalnánk.
+        Így növelhető azoknak a komponenseknek az aránya, amelyeket működés közben is teszteltünk.
+        Olyan kritikus esetekben mint a fenti példa, ezeket a teszteket nem csak egy mérnöki példányon, hanem minden elkészült darabon végrehajtják, hogy garantálják az elkészült alkatrész megfelelő működését.
+        Ennek már nem a tervek, hanem a konkrét példány működésének a célja.
 
+    \subsection{Integrált rendszertervezési és szimulációs technológiák előnyei}
+    Látható, hogy a két technológia alkalmazása külön-külön is számos előnyt biztosít a mérnökcsapatoknak, de a kettő integrációja további előnyökkel járhat.
+    A következőkben ezek az extra előnyök kerülnek bemutatásra.
+
+        \subsubsection{Munkafolyamatok konzisztenciájának garantálása}
+        Jelenleg lehetséges párhuzamosan használni modell alapú rendszertervezési és szimulációs technológiákat, azonban mivel nincs konkrét megfeleltetés a két terület között, így ezeknek a konzisztenciáját a hagyományos módszerekkel, kézzel kell garantálni.
+        Ha a két terület között kapcsolatot teremtünk, akkor ennek az ellenőrzése is automatizálható.
+
+        \subsubsection{Integrált V\&V}
+        A többi fejlesztési lépéshez hasonlóan a V\&V műveletek is kihatnak a rendszertervezés folyamatára, így azoknak meg kell jelenniük a modell megfelelő részeiben.
+        Mivel ezen a területen elterjedt a szimulációs technikák alkalmazása, így ennek az elősegítésében nagy szerepet játszana a direkt kapcsolat létrejötte.
+        Ez a validációs és verifikációs tevékenység minőségét is elősegítené, mivel a kapcsolat nélkül csak a rendszermodell és a szimulációs modell külön-külön vett vizsgálata lehetséges.
+        Tehát, bizonyíthatjuk, hogy a rendszer működőképes és az hogy a szimulációs modell a vártaknak megfelelően viselkedik, azt azonban nem tudjuk igazolni, hogy a szimulációkban valóban azt a rendszert látjuk, amelyet a rendszermodell leír.
+        Mivel a szimulációk eredménye csak akkor használható a további fejlesztésekhez, ha az tényleg a rendszer terveinek megfelelő működést mutatja.
+        Ezt jelenleg manuális ellenőrzésekkel lehet biztosítani, azonban ez erőforrás-igényes és számos hibalehetőséget visz a tervezési folyamatba, amelyeket a modellalapú módszerek megoldani hivatottak.
+        Ha a két technológiát összekapcsoljuk, akkor ezek automatizálhatóak, amely gyorsabb és biztonságosabb munkafolyamathoz vezet.
+
+        \subsubsection{Automatikus kódgenerálás}
+        A szimuláció célja, hogy a rendszer virtuális verziójának megfigyelhessük a működését, tehát el kell készítenünk a rendszer szimulálható modelljét az erre szolgáló környezetekben.
+        Ez jelenleg manuális folyamat, de ha kapcsolatot teremtünk a két terület között, akkor lehetségessé válna a rendszer szimulációs modelljének, vagy legalább annak vázának az automatikus generálása.
+        Így a szimulációs szakembereknek kevesebb ilyen repetitív rutinfeladattal kell tölteni az idejüket, illetve ez a módszer garantálja a modellnek, vagy annak alapjának a konzisztenciája eleve garantált, nem kell több iterációban javítani azt.
+
+        \subsubsection{Rendszer-identifikáció támogatása paraméter-visszavetítéssel.}
+        Gyakori probléma, hogy egy rendszernek nem ismertek a különböző paraméterei, amelyek szükségesek a viselkedés pontos leírásához.
+        Ennek a megoldására használják a különböző rendszer-identifikációs technikákat, amelyek lényege, hogy mérési eredményekből határozzák meg egy rendszer dinamikáját.
+        Ha a többi munkafolyamathoz hasonlóan ezek a munkálatok is reprezentálva vannak a modell munkafolyamatokra vonatkozó részén, akkor lehetőség van arra,
+        hogy ezeknek a méréseknek az eredményét a modellbe automatikusan átemeljük és egy következő lépésben frissítsük is ezek függvényében a szimulációs módszereket.
+        Ezt a folyamatot paraméter-visszavetítésnek nevezik, a célja, a szimulációs modellek paramétereinek olyan hangolása, hogy a szimulációk minél pontosabban megegyezzenek a mért értékekkel.
 
 \section{Jelenlegi eszközök}
+Az egyes komponensek, valamint a teljes rendszerek modellezésére illetve együttes szimulációjának támogatására számos
+szabvány született, melyek a probléma különböző aspektusaira kívánnak megoldást nyújtani. A területen végzett fejlesztés során
+ezekre a már meglévő elemekre célszerű építeni, nemcsak azért, mert így kezelhetőbb méretűvé válik a probléma, hanem azért is,
+mert ezek a szabványok már megjelentek az ipari alkalmazásokban is és egyre több eszköz támogatja őket.
+Az ilyen meglévő szabványokra épített eszközök emiatt könnyebben integrálható a jelenlegi munkamenetekbe,
+munkakörnyezetekbe. Mivel ezek a technológiák így kiemelt fontosságúak a későbbi munkára nézve, ezért
+először célszerű röviden áttekinteni ezeket.
 
     \subsection{Modellezési nyelvek}
-
+    A rendszereket a különböző nézőpontokból egy-egy erre a célra kifejlesztett nyelv segítségével írják le a mérnökök,
+    Mivel ezekkel a nyelvekkel készült modelleket akarunk összekapcsolni, így érdemes ezekkel kezdeni az áttekintést.
+        
         \subsubsection{SysML}
+        A SysML egy diagrammokon alapuló modellezési szabvány a rendszermérnökök igényeire szabva.
+        Jelenleg ez a legelterjedtebb modellezési eszköz a területen. Sajnálatos módon a modellben szereplő
+        komponensekhez készült részletes modellekkel szabványos módon nem tud kapcsolatot teremteni.
+        Leírhatóak a követelmények, paraméterek, különböző feltételezések, viselkedéseket, tesztek, de az
+        ezekhez kapcsolódó külső elemekkel az adatcserét és szinkronizációt kézzel vagy külső eszközökkel
+        kell biztosítani. A modellben lévő adatokra megfogalmazhatunk lekérdezéseket, így sokkal
+        könnyebben kereshetővé és nyomon követhetővé válik a tervezési folyamat. A nyelvhez lehetőség van
+        szakterület-specifikus kiterjesztések készítésére, így kiterjesztve a képességeit.
 
         \subsubsection{SysML v2}
+        A SysML új, jelenleg fejlesztés alatt álló változata. A nyelvet új alapokra helyezik\footnote{Új, saját metamodell készül a nyelvhez, amelyben más alapelemeket definiálnak a korábbiakhoz képest.},
+        ezen kívül számos új nyelvi elem kerül be a szabványba, amellyel jobban nyomon követhető a tervezési folyamat és
+        gyakorlatilag a modellbe olvasztja a dokumentációt is, beleértve például a különböző konfigurációkról
+        hozott fejlesztői döntéseket és az alapjául szolgáló méréseket. A nyelv a meglévő grafikus szintaxis
+        mellé szövegeset is kap, így gyorsabbá téve a modellezési folyamatot és lehetővé teszik a kódoknál
+        használt fejlesztést segítő eszközök használatát. Az újdonságok közül a mi munkánk szempontjából
+        külön kiemelendő két tulajdonság. Egyrészt a szöveges szintaxissal még kényelmesebbé válik a nyelvi
+        kiterjesztések készítése, továbbá lehetőség van külső fájlok hivatkozására a modellben, ezzel egy laza
+        kapcsolatot teremtve a külső modellekkel.
 
         \subsubsection{Modelica}
+        Ez egy általános modellezési nyelv, amely rendelkezik nyílt implementációval, ezért bárki számára
+        ingyenesen használható. Maga a nyelv deklaratív megközelítést alkalmaz, tehát a komponenstípusok
+        karakterisztikáit kell megadnunk, illetve a példányosított komponenseket fel kell paraméterezni és
+        definiálni a köztük fellépő kapcsolatokat. Ez sok esetben sokkal kényelmesebb tervezési folyamatot
+        tesz lehetővé, mint más megközelítések. A nyelv továbbá kiterjedt domain specifikus könyvtárakkal
+        rendelkezik a műszaki tudományok különböző ágainak támogatására.
+
+        A munkám során használt OpenModelica eszköz, amely a nyelv nyílt implementációjához tartozó
+        környezet, alapból támogatja az FMI és SSP szabványok használatát, amely komoly segítséget jelent a technológiák
+        integrálása során.
 
     \subsection{Modellek hordozása és szimulálása}
-
+    A fent említett nyelvek természetesen nem az egyedüliek a területen, valamint számos domain-specifikus megoldás létezi a rendszerek leírására és modellezésére mind nyelvi, mind fejlesztőkörnyezeti szempontból.
+    Ezért is van szükség olyan megoldásokra, amely a felhasznált technológiáktól függetlenül képesek reprezentálni a modelleket, hogy azok más eszközök számára is értelmezhetőek legyenek. A következőkben bemutatásra kerülnek erre a célra használt technológiák.
+    
         \subsubsection{Functional Mock-up Interface (FMI)}
+        A Functional Mock-up interface (a továbbiakban: FMI) szabvány egy egységes interface-szel
+        rendelkező csomagformátumot definiál, amellyel egyes komponensek modelljeit lehet becsomagolni,
+        hogy aztán egy közös szimulátorban összekapcsolhassák őket és ott a komponensekből felépítettet
+        rendszert lehet szimulálni. Ez egy nyílt szabvány, tehát bárki használhatja és számos eszköz van,
+        amely támogatja a modellek ilyen formátumba való exportálását. Nagy előnye, hogy mivel a közös
+        szimulációs környezet (a továbbiakban: koszimulátor) csak a csomagok külső interface-ét ismeri,
+        számos különböző eszközzel készült, eltérő típusú modellt lehet felhasználni egy rendszer
+        összeépítéséhez. Magát a szabványt úgy tervezték, hogy a csomagok adjanak egy olyan interface-t is,
+        amely a különböző, őket használó eszközöknek szól és változatos funkciókat tegyenek lehetővé a
+        metaadatok biztosításától a szimuláció közbeni monitorozásig. Fontos továbbá, hogy a szabvány úgy
+        lett megalkotva, hogy a lehető legtöbb területen alkalmazható legyen, így például beágyazott
+        rendszerekben elérhető erőforrásokkal is használhatóak ezek a csomagok.
 
         \subsubsection{System Structure and Parameterization (SSP)}
+        Ez a szabvány bár kapcsolódik az FMI-hez, de szerkezetéből adódóan bármilyen hasonló
+        komponensmodell csomagokhoz alkalmazható, ennek ellenére mi a továbbiakban az FMI csomagok (a
+        továbbiakban FMU), viszonylatában vizsgáljuk. A probléma, amit megoldani hivatott, hogy bár az
+        FMU-kból felépíthető egy rendszer, amelyet utána szimulálunk, de az FMI szabvány nem definiálja
+        azt, hogyan is lehetne felépíteni ezekből a csomagokból egy rendszert. Éppen ezért az SSP egy olyan
+        exportálható csomagot ír le, amellyel más, a komponenseket modellező csomagok kapcsolata írható le,
+        így felépítve azokból a rendszert, amelyet szimulálni akarunk. Mivel ezt a szabványt rendszerint az
+        FMI-vel együtt kezelik, ezért hasonló a támogatottsága, illetve az őt használó eszközök felé nyújtott
+        támogatásának képességei is. Illetve megemlítendő, hogy ez esetben is is nyílt szabványról van szó.
 
-\section{Alapvető problémák}
+
+\section{Jelenlegi problémák a területen}
 
     \subsection{Tervezési módszertanok hiánya}
 
