Jelenlegi problémák alfejezet

--- a/src/include/ownContent/hatter.tex
+++ b/src/include/ownContent/hatter.tex
@@ -216,9 +216,22 @@ először célszerű röviden áttekinteni ezeket.
 
 
 \section{Jelenlegi problémák a területen}
+A fentiekből látható ezeknek a technológiáknak az előnye, valamint bemutatásra került a környezek, amibe egy új megoldásnak illeszkednie kell.
+Ebben az alfejezetben a területen aktuális problémák kerülnek bemutatásra, mivel a dolgozat célja ezeknek a problémáknak a mérséklése vagy megszüntetése új módszerek kidolgozása révén.
 
     \subsection{Tervezési módszertanok hiánya}
+    Módszertani szempontból két komolyabb probléma van a további munka tekintetében.
+    Egyrészt, mivel a rendszermodellek és a szimulációs modellek két eltérő reprezentációját adják a rendszereknek, így azok eltérő szerkezetűek.
+    A területek összehangolásához célszerű olyan modellstruktúrákat kidolgozni, amely megkönnyíti az együttes alkalmazásukat és elősegíti a különböző szakemberek együttes munkáját ezen az új határterületen.
+    A másik probléma, hogy mivel ezek a technológiák még korai fázisban járnak, így nincsenek ilyen kiforrott, kidolgozott fejlesztési módszerek
+    Mint az a modellező nyelvek fejezetben is olvasható, a SysML a legelterjedtebb rendszertervező nyelv, amelynek hamarosan egy merőben új, a feladatra még inkább alkalmas a feladatának ellátására.
+    Éppen ezért a továbbiakban ezzel a nyelvvel foglalkozom a munkám során, mivel hosszútávon ez tűnik a legcélravezetőbbnek.
+    Az, hogy a nyelv még nem készült el teljesen, és nagyban eltér az elődjétől, azt is jelenti, hogy a felhasználására ugyan úgy nincsenek kiforrott módszerek.
+    Ez azt jelenti, hogy a továbbiakban egy ilyen módszer kidolgozásán is lehet -illetve kell- dolgozni, másfelől ez nagyobb flexibilitást enged a további munka során, mivel nem kell már bevett, de számunkra unpraktikus módszerekhez igazodni.
 
     \subsection{Modellek megfeleltetésének hiánya}
+    Bár számos korábbi munka foglalkozott azzal, milyen előnyökkel járna ezeknek a technológiáknak az integrációja (Lásd: //TODO), egy ilyen kapcsolat platformfüggetlen létesítésére még nincsen példa.
+    Olyan integráció, amely egy adott cég termékeit köti létesít hasonló kapcsolatot, a fenti előnyök egy részének érdekében, már létezik, azonban ez a gyártó termékeit köti össze, nem általánosan használható módszer.
 
     \subsection{Izolált V\&V}
+    A megfeleltetéshez hasonlóan a V\&V technikák alkalmazásának és munkafolyamatba olvasztásának előnyei már ismertek azonban a gyakorlatban -többek közt a leképezés hiánya miatt- erre még szintén nincs általános megoldás, csupán vendor-specifikus, konkrét eszközökhöz illeszkedő kezdeményezések.
